fix some library calls (freetype,ffmpeg) #8213

Closed
opened 2008-02-03 15:50:29 +01:00 by Shunichi Fuji · 5 comments

%%%Two patch that fix blender was got segfault on my sysmte.

First patch is related this my bug.
https://projects.blender.org/tracker/?func=detail&aid=8172&group_id=9&atid=125
i think this call is incorrect (wrong arg),
and this call prefer to use another one.(FT_Select_Charmap)
Btw, In fact this call seems to be no-effect in code.

  • 0 0x4176ff60 in FT_Get_CMap_Format () from /usr/lib/libfreetype.so.6
  • 1 0x4176ffda in FT_Set_Charmap () from /usr/lib/libfreetype.so.6
  • 2 0x084ba3ee in BLI_vfontdata_from_freetypefont ()
  • 3 0x084380c0 in load_vfont ()
  • 4 0x08195d64 in get_builtin_font ()
  • 5 0x08195dec in add_primitiveFont ()
  • 6 0x0815a6e4 in do_info_addmenu ()
  • 7 0x0826f5f9 in uiDoBlocks ()
  • 8 0x080cb2cd in toolbox_n ()
  • 9 0x0818228a in screenmain ()

10 0x080c98a4 in main ()

Second patch is adapting new abi change.
libavformat changed AVFormatContext struct in version 52.0.0.
http://svn.mplayerhq.hu/ffmpeg/trunk/libavformat/avformat.h?r1=11033&r2=11071

Blender repository has ffmpeg, but it build with system libs sometimes.
It may buildable on new and old if apply this.%%%

%%%Two patch that fix blender was got segfault on my sysmte. First patch is related this my bug. https://projects.blender.org/tracker/?func=detail&aid=8172&group_id=9&atid=125 i think this call is incorrect (wrong arg), and this call prefer to use another one.(FT_Select_Charmap) Btw, In fact this call seems to be no-effect in code. ---- - 0 0x4176ff60 in FT_Get_CMap_Format () from /usr/lib/libfreetype.so.6 - 1 0x4176ffda in FT_Set_Charmap () from /usr/lib/libfreetype.so.6 - 2 0x084ba3ee in BLI_vfontdata_from_freetypefont () - 3 0x084380c0 in load_vfont () - 4 0x08195d64 in get_builtin_font () - 5 0x08195dec in add_primitiveFont () - 6 0x0815a6e4 in do_info_addmenu () - 7 0x0826f5f9 in uiDoBlocks () - 8 0x080cb2cd in toolbox_n () - 9 0x0818228a in screenmain () # 10 0x080c98a4 in main () Second patch is adapting new abi change. libavformat changed AVFormatContext struct in version 52.0.0. http://svn.mplayerhq.hu/ffmpeg/trunk/libavformat/avformat.h?r1=11033&r2=11071 Blender repository has ffmpeg, but it build with system libs sometimes. It may buildable on new and old if apply this.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%assigning to peter since he deals with the ffmpeg end of things...

thanks for the patch, bug fixes are always appreciated%%%

%%%assigning to peter since he deals with the ffmpeg end of things... thanks for the patch, bug fixes are always appreciated%%%
Member

%%%applied ffmpeg patch, but I don't really know, if the font patch can be approved.

Sincerely,
Peter%%%

%%%applied ffmpeg patch, but I don't really know, if the font patch can be approved. Sincerely, Peter%%%
Member

%%%I'll take responsibility for adding the FT patch. Thanks! :)%%%

%%%I'll take responsibility for adding the FT patch. Thanks! :)%%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#8213
No description provided.