== FFMPEG ==

Applied  	

[#8213] fix some library calls (freetype,ffmpeg)

to fix a segfault when linking against newer ffmpeg-libs.